@@ -1,3 +1,11 @@
+2004-05-27  Darin Adler  <darin@apple.com>
+
+        - fixed bug where all pages with images would cause a crash
+        - fixed Deployment build
+
+        * kwq/KWQPainter.mm: (QPainter::drawPixmap): Put #if 0 around placeholder code
+        for setting up the graphics context.
+
 2004-05-26  Richard Williamson   <rjw@apple.com>
 
 	Added shadow support (w/ Louch).
